# tritonparse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  event_diff.py  faulty_kernel.py  pyproject.toml  repro.py  run.py
.ci/: README.md  install-cudnn.sh  install-project.sh  install-triton-kernels.sh  install-triton-pip.sh  install-triton.sh  run-tests.sh  setup.sh
.github/: PAGES_SETUP.md  copilot-instructions.md
.github/workflows/: deploy-pages-standalone.yml  deploy-pages.yml  nightly-pypi.yml  test.yml
docs/: README.md
docs/wiki-pages/: 01.-Installation.md  02.-Usage-Guide.md  03.-Web-Interface-Guide.md  04.-Developer-Guide.md  05.-Code-Formatting.md  06.-FAQ.md  Home.md
tests/: README.md  conftest.py  dedicated_log_triton_trace_.ndjson  dedicated_log_triton_trace__mapped.ndjson  test_add.py  test_complex_kernels.py  test_reproducer.py  test_tritonparse.py  unit_tests.py
tests/example_output/logs/: dedicated_log_triton_trace_findhao_.ndjson
tests/example_output/parsed_output/: log_file_list.json
tests/example_output/parsed_output_complex/: log_file_list.json
tests/example_output/repro/: repro_context_20250816192455.json
tritonparse/: common.py  decompress_bin_ndjson.py  event_diff.py  extract_source_mappings.py  ir_parser.py  mapper.py  shared_vars.py  source_type.py  sourcemap_utils.py  structured_logging.py  tensor_add_example.py  tp_logger.py  trace_processor.py  utils.py
tritonparse/reproducer/: __init__.py  __main__.py  cli.py  config.py  factory.py  log_config.py  orchestrator.py  param_generator.py  utils.py
tritonparse/reproducer/ingestion/: __init__.py  ndjson.py
tritonparse/reproducer/prompts/: generate_one_shot.txt  loader.py  repair_loop.txt  reproduce_error.txt  retry_reproduce_error.txt  summarize_error.txt  system.txt  system_import.txt  (+1 more)
tritonparse/tools/: compare_two_record.py  decompress_bin_ndjson.py  format_fix.py  load_tensor.py  prettify_ndjson.py  readme.md
website/: eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
website/public/: f0_fc0_a0_cai-.ndjson
website/scripts/: inline-html.js
website/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
(+28 files in other folders)
