[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tritonparse"
version = "0.1.0"
dependencies = [
    "triton",
]

[project.optional-dependencies]
test = [
    "coverage>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["tritonparse*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ufmt]
formatter = "black"
sorter = "usort"

[tool.usort]
first_party_detection = false

[project.urls]
"Homepage" = "https://github.com/pytorch-labs/tritonparse"
